--- a/src/Components/Terminal/index.module.scss
+++ b/src/Components/Terminal/index.module.scss
@@ -1,6 +1,20 @@
 .terminal_logo {
   display: block;
   border-radius: 15px;
+}
+
+.mts_logo {
   height: 150px;
   width: 150px;
+}
+
+.tele2_logo {
+  height: 150px;
+  width: 230px;
+}
+
+.megafon_logo {
+  margin-top: 20px;
+  height: 50px;
+  width: 220px;
 }
