--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -18,7 +18,10 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   min-width: 320px;
+  height: 100vh;
+  border-radius: 0px;
 
   @include desktop {
     top: 150px;
@@ -27,5 +30,6 @@ code {
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
+    border-radius: 15px;
   }
 }
