--- a/src/Components/Terminal/index.module.scss
+++ b/src/Components/Terminal/index.module.scss
@@ -1,58 +1,151 @@
+@import "../../vars/mq.scss";
+
+.container {
+  height: 100vh;
+
+  @include desktop {
+    width: 800px;
+    height: 500px;
+    top: 150px;
+  }
+}
+
 .terminal_logo {
   display: block;
   border-radius: 15px;
+  @include desktop {
+    display: block;
+    border-radius: 15px;
+  }
 }
 
 .mts_logo {
   height: 150px;
   width: 150px;
+
+  @include desktop {
+    height: 150px;
+    width: 150px;
+  }
 }
 
 .tele2_logo {
   height: 150px;
   width: 230px;
+  @include desktop {
+    height: 150px;
+    width: 230px;
+  }
 }
 
 .megafon_logo {
   margin-top: 20px;
   height: 50px;
   width: 220px;
+  @include desktop {
+    margin-top: 20px;
+    height: 50px;
+    width: 220px;
+  }
 }
 
-.btn_terminal {
+.btn_back {
   border: none;
   position: absolute;
-  left: 10px;
-  top: 50px;
-  border-radius: 5px;
-  width: 100px;
+  width: 100%;
   height: 50px;
   font-size: 15px;
-  top: 20px;
+  bottom: 0px;
+  &:hover {
+    box-shadow: 3px 4px 4px gray;
+  }
+
+  @include desktop {
+    border: none;
+    position: absolute;
+    left: 10px;
+    top: 50px;
+    border-radius: 5px;
+    width: 100px;
+    height: 50px;
+    font-size: 15px;
+    top: 20px;
+  }
 }
 
 .btn_mts {
   background-color: red;
   color: white;
-
-  &:hover {
-    box-shadow: 2px 4px 4px black;
-  }
 }
 
 .btn_tele2 {
   background-color: black;
   color: white;
-
-  &:hover {
-    box-shadow: 2px 4px 4px rgb(90, 90, 90);
-  }
 }
 
 .btn_megafon {
   background-color: #00ba55;
+}
+
+.terminal_number {
+  border: 2px solid #bdbdbd;
+  border-radius: 5px;
+  display: inline;
+  height: 20px;
+  box-shadow: 2px 2px 3px gray;
+
+  @include desktop {
+    border: 2px solid #bdbdbd;
+    border-radius: 5px;
+    display: inline;
+    height: 20px;
+    box-shadow: 2px 2px 3px gray;
+  }
+
+  &:focus {
+    outline: none;
+    width: 175px;
+    height: 22px;
+  }
 
   &:hover {
-    box-shadow: 2px 4px 4px black;
+    width: 175px;
+    height: 22px;
+  }
+}
+
+p {
+  display: inline;
+  font-size: 20px;
+  margin-right: 10px;
+
+  @include desktop {
+    display: inline;
+    font-size: 20px;
+    margin-right: 10px;
+  }
+}
+
+.btn_pay {
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  height: 50px;
+  font-size: 15px;
+  margin-bottom: 15px;
+  background-color: #949393;
+
+  @include desktop {
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 50px;
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+
+  &:hover {
+    background-color: #bdbdbd;
+    box-shadow: 2px 2px 6px rgb(68, 68, 68);
   }
 }
